# atlas-v2-demo

./: .gitignore  LICENSE  README.md  app.py  config.yaml  generation.ipynb  requirements.txt
assets/: style.css
database/models/: logit_sf1.joblib  rff_lgcp_sf1.weights.h5
database/outputs/examples/pettimudi_6-9-20/: featurecollection.json  tuple.pkl
database/outputs/examples/washingtondc_8-3-25_12:00/: featurecollection.json  tuple.pkl
database/records/: pca.joblib  spec.json
featuretoolkit/: README.md  pyproject.toml
featuretoolkit/src/: __init__.py  common.py  coolr.py  gfld.py  transform.py
